--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,7 @@ body {
 footer {
   font-family: "Roboto", serif;
   font-weight: 800;
+  color: #f1ece9;
 }
 
 h1,
@@ -33,8 +34,8 @@ h3 {
 
 .container {
   width: 100%;
-  padding: 0px;
-  gap: 0px;
+  height: fit-content;
+  padding: 10px;
   display: grid;
   grid-template-columns: 100%;
   grid-auto-rows: minmax(100px, auto);
@@ -45,12 +46,6 @@ h3 {
     "ft";
 }
 
-.post {
-  grid-area: main;
-  text-align: justify;
-  padding-left: 30px;
-  padding-right: 30px;
-}
 .header {
   grid-area: hd;
   background-color: #fe5510;
@@ -58,33 +53,41 @@ h3 {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  padding: 10px 0 10px 0;
+  padding: 10px 0px 10px 0px;
   border-radius: 10px;
-  margin: 10px;
+  width: 100%;
+  height: fit-content;
 }
 
 .content {
   grid-area: main;
-  height: auto;
-  padding: 10px;
-  margin: 10px;
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(390px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(310px, 1fr));
   grid-gap: 1vw;
   justify-items: center;
+  height: auto;
+  padding-top: 10px;
+}
+
+.post {
+  grid-area: main;
+  text-align: justify;
+  max-width: 100%;
 }
 
 .sidebar {
   grid-area: sd;
   background-color: thistle;
   border: 2px solid blueviolet;
-  margin: 20px 10px 0px 0px;
   padding: 20px;
+  margin: 5px 0px 5px 0px;
   text-align: left;
   line-height: 1.5em;
+  display: flex;
+  flex-direction: column;
   justify-self: center;
   border-radius: 10px;
-  width: 87%;
+  width: 100%;
 }
 
 .author-info {
@@ -116,8 +119,9 @@ h3 {
   align-items: center;
   padding: 20px;
   border-radius: 10px;
-  margin: 20px 10px 0px 20px;
-  width: 87%;
+  margin: 5px 0px 0px 0px;
+  width: 100%;
+  height: fit-content;
 }
 
 #site-name {
@@ -210,91 +214,58 @@ h3 {
 }
 
 /* small desktops*/
-@media (min-width: 410px) and (max-width: 768px) {
+@media (min-width: 655px) and (max-width: 1180px) {
   .container {
+    height: auto;
     grid-template-columns: repeat(2, 1fr);
-    grid-auto-rows: minmax(50px, auto);
+    grid-auto-rows: minmax(0px, auto);
     grid-template-areas:
       "hd hd "
-      "sd main"
-      "se main"
+      "main main"
+      "sd ."
       "ft ft";
   }
 
   .header {
-    background-color: blueviolet;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    padding-left: 3%;
-    padding-right: 3%;
-  }
-
-  .search-area {
-    width: 80%;
-    justify-self: center;
+    padding: 10px;
   }
 
   .sidebar {
-    width: 100%;
+    padding: 20px;
+    margin: 10px 5px 0px 0px;
+    width: 98%;
+  
   }
 
   .footer {
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
-    width: 94%;
-  }
-}
-
-/* medium desktops*/
-@media (min-width: 769px) and (max-width: 991px) {
-  .container {
-    grid-template-columns: repeat(3, 1fr);
-    grid-auto-rows: minmax(50px, auto);
-    grid-template-areas:
-      "hd hd hd "
-      "sd main main "
-      "se main main"
-      "ft ft ft";
-  }
-
-  .header {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    padding-left: 3%;
-    padding-right: 3%;
-  }
-
-  .footer {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-    width: 96%;
   }
 }
 
 /* large desktops*/
-@media (min-width: 992px) {
+@media (min-width: 1175px) {
   .container {
-    grid-template-columns: repeat(8, 1fr);
-    grid-auto-rows: minmax(50px, auto);
+    grid-template-columns: repeat(4, 1fr);
+    grid-auto-rows: minmax(10px, auto);
     grid-template-areas:
-      "hd hd hd hd hd hd hd hd"
-      "sd sd main main main main main main "
-      ". . main main main main main main"
-      "ft ft ft ft ft ft ft ft";
+      "hd hd hd hd"
+      "main main main main "
+      "sd sd . ."
+      "ft ft ft ft";
   }
 
   .header {
-    grid-area: hd;
     display: flex;
+    flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    padding: 10px 20px;
+    padding: 10px;
   }
 
   .footer {
@@ -304,14 +275,5 @@ h3 {
     justify-content: space-evenly;
     align-items: center;
     width: 98%;
-  }
-
-  .socials li {
-    font-size: 22px;
-  }
-
-  .post-card-image {
-    width: 100%;
-    height: 200px;
   }
 }
