--- a/css/style.css
+++ b/css/style.css
@@ -83,18 +83,17 @@ h3 {
   margin: 5px 0px 5px 0px;
   text-align: left;
   line-height: 1.5em;
-  display: flex;
-  flex-direction: column;
   justify-self: center;
   border-radius: 10px;
-  width: 100%;
+  display: flex;
+  flex-direction: column;
+  max-width: 610px
+
 }
 
 .author-info {
   grid-area: sd;
   width: 100%;
-  display: flex;
-  flex-direction: column;
   justify-items: center;
   align-items: center;
   padding-left: 10px;
@@ -238,7 +237,7 @@ h3 {
     padding: 20px;
     margin: 10px 5px 0px 0px;
     width: 98%;
-  
+
   }
 
   .footer {
@@ -255,8 +254,8 @@ h3 {
     grid-auto-rows: minmax(10px, auto);
     grid-template-areas:
       "hd hd hd hd"
-      "main main main main "
-      "sd sd . ."
+      "sd main main main "
+      ". main main main"
       "ft ft ft ft";
   }
 
@@ -268,12 +267,19 @@ h3 {
     padding: 10px;
   }
 
+  .sidebar {
+    padding: 20px;
+    margin: 10px 5px 0px 0px;
+    width: 98%;
+
+  }
+
   .footer {
     color: #d6d7dc;
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
     align-items: center;
-    width: 98%;
+    width: 100%;
   }
 }
